Replaced List.of() with Arrays.asList() to keep target java version as 1.8